# MixailOS

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_debug.bat  direct_build.bat  go.mod  go.sum  main.go  test_lib.bat
core/: config.go  console.go  filesystem.go
ui/: cgo_bridge.go  ui.cpp  ui.go  ui_bridge.h  ui_test.cpp  winmain.cpp
